--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/indie-flower": "^5.2.5",
     "@fontsource/poppins": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
+    "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^7.0.2",
     "framer-motion": "^12.7.3",
     "react": "^19.0.0",
