--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@mui/material": "^7.0.2",
     "framer-motion": "^12.7.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
